# mcp-legifrance

./: .coveragerc  .env.sample  .gitignore  .releaserc.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pre-commit-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.huggingface/: README.md
docs/: index.md  mkdocs.yml
examples/: lmstudio_tool.json  n8n_template.json  zapier_webhook.json
legifrance_mcp/: __init__.py  cli.py  config.py  server.py
scripts/: check_env.py
tests/: test_basic.py
